--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+       importScripts('https://www.gstatic.com/firebasejs/3.5.0/firebase-app.js');
+ importScripts('https://www.gstatic.com/firebasejs/3.5.0/firebase-messaging.js');
+
+ if ('serviceWorker' in navigator) {
+     navigator.serviceWorker.register('../firebase-messaging-sw.js')
+       .then(function(registration) {
+         console.log('Registration successful, scope is:', registration.scope);
+       }).catch(function(err) {
+        console.log('Service worker registration failed, error:', err);
+      });
+    }
+
+ firebase.initializeApp({
+     messagingSenderId: "371170680751",
+   })
+
+ const initMessaging = firebase.messaging()
+      </script>
   </body>
 </html>
